@@ -10,8 +10,6 @@ repositories {
 
 dependencies {
     // Development dependencies
-    implementation("org.jetbrains:annotations:24.0.0")
-    implementation("com.google.guava:guava:33.2.1-jre")
     implementation("org.jline:jline:3.26.1")
 
     // Testing dependencies
@@ -24,6 +22,8 @@ java {
     toolchain {
         languageVersion.set(JavaLanguageVersion.of(21))
     }
+    sourceCompatibility = JavaVersion.VERSION_21
+    targetCompatibility = JavaVersion.VERSION_21
 }
 
 application {
@@ -31,13 +31,13 @@ application {
     mainClass.set("cora.App")
 
     //Sets the application DefaultJVMArgs
-    applicationDefaultJvmArgs = listOf("--enable-preview")
+    applicationDefaultJvmArgs = listOf()
 }
 
 tasks {
     // Compiler options with preview java features enabled
     val COMPILER_OPTIONS =
-        listOf("--enable-preview", "-Xlint:preview", "-Xlint:deprecation", "-Xlint:unchecked")
+        listOf("-Xlint:deprecation", "-Xlint:unchecked")
 
     withType<JavaCompile>() {
         options.compilerArgs = COMPILER_OPTIONS;
@@ -47,11 +47,9 @@ tasks {
     named<Test>("test") {
         // Use JUnit Platform for unit tests.
         useJUnitPlatform()
-        jvmArgs = listOf("--enable-preview")
     }
 
     named<JavaExec>("run") {
-        jvmArgs = listOf("--enable-preview")
         standardInput = System.`in`
     }
 }
